--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
   },
   "dependencies": {},
   "devDependencies": {
+    "@chainlink/contracts": "^0.4.1",
     "husky": "^7.0.2",
     "lint-staged": "^13.0.3"
   },
